[package]
name = "cnrust"
version = "0.1.0"
authors = ["vinli <vinli@digitalgd.com.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = "0.4.6"
mongodb = "1.1.1"
